--- a/ShScheduler/_ucTriggers.fr.resx
+++ b/ShScheduler/_ucTriggers.fr.resx
@@ -117,121 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="btnAddTrigger.Text" xml:space="preserve">
+    <value>Ajouter un déclencheur</value>
+  </data>
+  <data name="olvTriggerKey.Text" xml:space="preserve">
+    <value>Détente</value>
+  </data>
   <data name="olvJobName.Text" xml:space="preserve">
-    <value>Job</value>
+    <value>Travail</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="olvJobName.Width" type="System.Int32, mscorlib">
-    <value>99</value>
+  <data name="olvState.Text" xml:space="preserve">
+    <value>État</value>
   </data>
-  <data name="olvTriggerName.Text" xml:space="preserve">
-    <value>Trigger</value>
+  <data name="olvNextFire.Text" xml:space="preserve">
+    <value>Prochain horaire de lancement</value>
   </data>
-  <data name="olvTriggerName.Width" type="System.Int32, mscorlib">
-    <value>113</value>
-  </data>
-  <data name="olvText.Text" xml:space="preserve">
-    <value>Feedback</value>
-  </data>
-  <data name="olvText.Width" type="System.Int32, mscorlib">
-    <value>267</value>
-  </data>
-  <data name="olvUser.Text" xml:space="preserve">
-    <value>User</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="olvFeedback.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Left</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="olvFeedback.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
-  </data>
-  <data name="olvFeedback.Size" type="System.Drawing.Size, System.Drawing">
-    <value>588, 345</value>
-  </data>
-  <data name="olvFeedback.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;olvFeedback.Name" xml:space="preserve">
-    <value>olvFeedback</value>
-  </data>
-  <data name="&gt;&gt;olvFeedback.Type" xml:space="preserve">
-    <value>BrightIdeasSoftware.ObjectListView, ObjectListView, Version=2.9.1.1072, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4</value>
-  </data>
-  <data name="&gt;&gt;olvFeedback.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;olvFeedback.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="btnRefresh.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
-    <value>Flat</value>
-  </data>
-  <data name="btnRefresh.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Candara, 9.75pt, style=Bold</value>
-  </data>
-  <data name="btnRefresh.Location" type="System.Drawing.Point, System.Drawing">
-    <value>594, 3</value>
-  </data>
-  <data name="btnRefresh.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 30</value>
-  </data>
-  <data name="btnRefresh.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
+  <data name="olvColumnAction.Text" xml:space="preserve">
+    <value>Action</value>
   </data>
   <data name="btnRefresh.Text" xml:space="preserve">
-    <value>Refresh</value>
-  </data>
-  <data name="&gt;&gt;btnRefresh.Name" xml:space="preserve">
-    <value>btnRefresh</value>
-  </data>
-  <data name="&gt;&gt;btnRefresh.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;btnRefresh.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;btnRefresh.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
-  </data>
-  <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
-    <value>676, 345</value>
-  </data>
-  <data name="&gt;&gt;olvJobName.Name" xml:space="preserve">
-    <value>olvJobName</value>
-  </data>
-  <data name="&gt;&gt;olvJobName.Type" xml:space="preserve">
-    <value>BrightIdeasSoftware.OLVColumn, ObjectListView, Version=2.9.1.1072, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4</value>
-  </data>
-  <data name="&gt;&gt;olvTriggerName.Name" xml:space="preserve">
-    <value>olvTriggerName</value>
-  </data>
-  <data name="&gt;&gt;olvTriggerName.Type" xml:space="preserve">
-    <value>BrightIdeasSoftware.OLVColumn, ObjectListView, Version=2.9.1.1072, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4</value>
-  </data>
-  <data name="&gt;&gt;olvText.Name" xml:space="preserve">
-    <value>olvText</value>
-  </data>
-  <data name="&gt;&gt;olvText.Type" xml:space="preserve">
-    <value>BrightIdeasSoftware.OLVColumn, ObjectListView, Version=2.9.1.1072, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4</value>
-  </data>
-  <data name="&gt;&gt;olvUser.Name" xml:space="preserve">
-    <value>olvUser</value>
-  </data>
-  <data name="&gt;&gt;olvUser.Type" xml:space="preserve">
-    <value>BrightIdeasSoftware.OLVColumn, ObjectListView, Version=2.9.1.1072, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4</value>
-  </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>_ucFeedbacks</value>
-  </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.UserControl, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>Actualiser</value>
   </data>
 </root>
