--- a/ShScheduler/_ucTriggers.resx
+++ b/ShScheduler/_ucTriggers.resx
@@ -172,10 +172,13 @@
     <value>136</value>
   </data>
   <data name="olvColumnAction.Text" xml:space="preserve">
-    <value>Action</value>
+    <value>   </value>
   </data>
-  <data name="olvColumnAction.Width" type="System.Int32, mscorlib">
-    <value>124</value>
+  <data name="olvDelete.Text" xml:space="preserve">
+    <value>   </value>
+  </data>
+  <data name="olvDelete.Width" type="System.Int32, mscorlib">
+    <value>100</value>
   </data>
   <data name="olvTriggers.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Left</value>
@@ -268,6 +271,12 @@
     <value>olvColumnAction</value>
   </data>
   <data name="&gt;&gt;olvColumnAction.Type" xml:space="preserve">
+    <value>BrightIdeasSoftware.OLVColumn, ObjectListView, Version=2.9.1.1072, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4</value>
+  </data>
+  <data name="&gt;&gt;olvDelete.Name" xml:space="preserve">
+    <value>olvDelete</value>
+  </data>
+  <data name="&gt;&gt;olvDelete.Type" xml:space="preserve">
     <value>BrightIdeasSoftware.OLVColumn, ObjectListView, Version=2.9.1.1072, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
